# MCP_for_Simple_Financial_Stock_Market

./: .env.example  README.md  financial_chatbot.py  financial_server.py  guardrails.py  pyproject.toml  server_config.json  setup.py
enhanced_version/: enhanced_financial_chatbot.py  guardrails.py  guardrails_config.py  simple_financial_chatbot.py
financial_data/: AAPL_info.json  GOOGL_info.json  MSFT_info.json  NVDA_info.json  market_summary_20250720_132820.json
